# nano.rust

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  lychee.toml
app/: muon_framework.cpp  nano_make_condor.cpp  nano_run.cpp  runtime_common.h
configs/: base.yaml  higgs4l.toml  muon_2024.yaml
crates/nano-cli/: Cargo.toml
crates/nano-cli/src/: lib.rs  main.rs
crates/nano-cli/tests/: commands.rs
crates/nano-cli/tests/fixtures/: broken-muon.toml
crates/nano-corrections/: Cargo.toml
crates/nano-corrections/src/: lib.rs
crates/nano-corrections/tests/: evaluator.rs
crates/nano-gen-analysis-demo/: Cargo.toml  build.rs
crates/nano-gen-analysis-demo/specs/: end_to_end_analysis.toml
crates/nano-gen-analysis-demo/src/: lib.rs
crates/nano-gen-analysis-demo/tests/: end_to_end_analysis.rs
crates/nano-gen-demo/: Cargo.toml  build.rs  fuzz_specs.rs
crates/nano-gen-demo/src/: lib.rs
crates/nano-gen-demo/tests/: adl_round_trip_fuzz.rs  differential_fuzz.rs  generated_matches_handwritten.rs
crates/nano-gen-dimuon-demo/: Cargo.toml  build.rs
crates/nano-gen-dimuon-demo/src/: lib.rs
crates/nano-gen-dimuon-demo/tests/: generated_matches_handwritten.rs
crates/nano-gen-higgs4l-demo/: Cargo.toml  build.rs
crates/nano-gen-higgs4l-demo/src/: lib.rs
crates/nano-gen-higgs4l-demo/tests/: generated_matches_handwritten.rs
crates/nano-gen-multijet-demo/: Cargo.toml  build.rs
crates/nano-gen-multijet-demo/src/: lib.rs  reference.rs
crates/nano-gen-multijet-demo/tests/: generated_matches_reference.rs
crates/nano-gen-mutagger-demo/: Cargo.toml  build.rs
crates/nano-gen-mutagger-demo/src/: lib.rs  reference.rs
crates/nano-gen-mutagger-demo/tests/: generated_matches_reference.rs
crates/nano-gen-tagger-demo/: Cargo.toml  build.rs
crates/nano-gen-tagger-demo/src/: lib.rs
crates/nano-gen-tagger-demo/tests/: generated_matches_handwritten.rs
crates/nano-gen-zmumu-demo/: Cargo.toml  build.rs
crates/nano-gen-zmumu-demo/src/: lib.rs  reference.rs
crates/nano-gen-zmumu-demo/tests/: generated_matches_reference.rs
crates/nano-inference/: Cargo.toml
crates/nano-inference/examples/: bench_infer.rs
crates/nano-inference/src/: features.rs  lib.rs  managed.rs  mock.rs  provider.rs  remote.rs  tensor.rs
crates/nano-inference/tests/: http.rs  protocol.rs
crates/nano-io/: Cargo.toml
crates/nano-io/examples/: bench_parallel.rs  bench_read.rs  dimuon_opendata.rs  full_analysis_workflow.rs  higgs4l_opendata.rs  higgs4l_stack_opendata.rs  read_url_json.rs  write_synthetic.rs
crates/nano-io/examples/plot_hist/: mod.rs
crates/nano-io/src/: datacard.rs  lib.rs  samples.rs
crates/nano-io/tests/: datacard_emitter.rs  dimuon_opendata.rs  full_analysis_workflow.rs  higgs4l_opendata.rs  higgs4l_stack_opendata.rs  histogram_root_output.rs  http_nanoaod.rs  real_nanoaod_read.rs  real_nanoaod_streaming_skim.rs  sample_normalization.rs  skim_pipeline.rs  write_roundtrip.rs
crates/nano-jit/: Cargo.toml  README.md
crates/nano-jit/src/: lib.rs  muon.rs
crates/nano-jit/tests/: muon_equivalence.rs
crates/nano-mcp/: Cargo.toml
crates/nano-mcp/src/: lib.rs  main.rs
crates/nano-mcp/tests/: handlers.rs
crates/nano-producers/: Cargo.toml
crates/nano-producers/src/: lib.rs  muon.rs  weights.rs
crates/nano-producers/tests/: weights.rs
crates/nano-review/: Cargo.toml
crates/nano-review/src/: lib.rs
crates/nano-rootio/: Cargo.toml
crates/nano-rootio/examples/: write_demo.rs
crates/nano-rootio/src/: decompress.rs  error.rs  lib.rs  parse.rs  root_file.rs  tree.rs  write.rs
crates/nano-rootio/tests/: ab_root_io.rs
crates/nano-spec/: Cargo.toml
crates/nano-spec/examples/: dimuon.adl  dimuon.toml  higgs2e2mu_minimal.toml  higgs4l.adl  higgs4l.toml  higgs4l_2e2mu.toml  higgs4l_4e.toml  higgs4l_all.toml  higgs4mu_minimal.toml  jes_payload.adl  jes_payload.toml  lumi_mask_trigger.toml  multijet_ht.adl  multijet_ht.toml  muon.adl  muon.toml  muon.yaml  muon_broken.toml  muon_hist_nominal.toml  muon_hist_shape_correction.adl  muon_hist_shape_correction.toml  muon_hist_shape_nominal.toml  muon_hist_weight_systematic.adl  muon_hist_weight_systematic.toml  muon_sf.adl  muon_sf.toml  muon_tagger.toml  mutagger_cr.adl  mutagger_cr.toml  nominal_weight.adl  nominal_weight.toml  selection_all.toml  selection_charge_balance.toml  selection_pair_dr.toml  selection_sip3d.toml  zmumu_cr.adl  zmumu_cr.toml
crates/nano-spec/src/: adl.rs  certificate.rs  codegen.rs  core.rs  interpret.rs  kir.rs  lib.rs
crates/nano-spec/tests/: adversarial_reject.rs  certificate.rs
crates/nano-spec/tests/data/: jes_uncertainty.json  malformed_golden.json  muon_sf.json  synthetic_golden.json
crates/nano-ui/: Cargo.toml
crates/nano-ui/src/: lib.rs  main.rs  plot.rs  session.rs  tui.rs  web.rs
crates/nano-workflow/: Cargo.toml
crates/nano-workflow/src/: artifacts.rs  error.rs  executor.rs  lib.rs  planner.rs  portable.rs  provenance.rs  sink.rs  tasks.rs
crates/nano-workflow/tests/: muon_workflow.rs
crates/root-io/: Cargo.toml
crates/root-io/src/: error.rs  lib.rs  write.rs
crates/root-io/src/core/: data_source.rs  file.rs  file_item.rs  mod.rs  parsers.rs  tstreamer.rs  tstreamerinfo.rs  typeid.rs
crates/root-io/src/tree_reader/: branch.rs  container.rs  leafs.rs  mod.rs  tree.rs
crates/root-io/tests/: high_level_io.rs  read_esd.rs  read_simple.rs  write_roundtrip.rs
docs/: adl-frontend.md  agent-interface.md  architecture.md  compiler-roadmap.md  create-new-channel.md  framework-plan.md  framework-structure.md  inference-protocol.md  orchestrator.md  preservation.md  reader-rewrite.md  rust-migration.md  semantic-layer.md  state-machine.md  ui-layer.md  versioning.md  vision.md  worked-example.md  xrootd-source.md
integrations/: README.md  dask_runner.py  ray_runner.py
scripts/: bench_vs_uproot.py  build_site.py  demo_higgs.sh  demo_opendata.sh  demo_parallel.sh  demo_root_interop.sh  demo_session.sh  fmt_opendata.py  higgs4l_root_crosscheck.sh  higgs4l_stack_root_crosscheck.sh  root_crosscheck.sh
tests/: local_input_samples.yaml  (+2 more)
(+98 files in other folders)
