# nano.rust — Rust rewrite of the nano.cpp NanoAOD analysis framework.
# The C++ tree (CMake) still builds alongside this during the migration;
# see docs/rust-migration.md. ROOT I/O lives in-tree at crates/root-io
# (vendored from alice-rs, MPL-2.0, extended with a native write path).
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/DickyChant/nano.rust"

[workspace.dependencies]
nano-core = { path = "crates/nano-core" }
nano-io = { path = "crates/nano-io" }
nano-producers = { path = "crates/nano-producers" }
root-io = { path = "crates/root-io" }
