# nano.rust — Rust rewrite of the nano.cpp NanoAOD analysis framework.
# The C++ tree (CMake) still builds alongside this during the migration;
# see docs/rust-migration.md. The vendored root-io crate remains in-tree for
# nano-rootio A/B tests only.
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/DickyChant/nano.rust"

[workspace.dependencies]
nano-analysis = { path = "crates/nano-analysis" }
nano-core = { path = "crates/nano-core" }
nano-io = { path = "crates/nano-io" }
nano-producers = { path = "crates/nano-producers" }
nano-rootio = { path = "crates/nano-rootio" }
nano-corrections = { path = "crates/nano-corrections" }
nano-spec = { path = "crates/nano-spec" }
nano-gen-demo = { path = "crates/nano-gen-demo" }
