# nano.rust — Rust rewrite of the nano.cpp NanoAOD analysis framework.
# The C++ tree (CMake) still builds alongside this during the migration;
# see docs/rust-migration.md. The vendored root-io crate remains in-tree for
# nano-rootio A/B tests only.
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/DickyChant/nano.rust"

[workspace.dependencies]
nano-analysis = { path = "crates/nano-analysis" }
nano-core = { path = "crates/nano-core" }
nano-io = { path = "crates/nano-io" }
nano-inference = { path = "crates/nano-inference" }
nano-producers = { path = "crates/nano-producers" }
nano-rootio = { path = "crates/nano-rootio" }
nano-corrections = { path = "crates/nano-corrections" }
nano-spec = { path = "crates/nano-spec" }
nano-review = { path = "crates/nano-review" }
nano-workflow = { path = "crates/nano-workflow" }
nano-gen-demo = { path = "crates/nano-gen-demo" }
nano-gen-tagger-demo = { path = "crates/nano-gen-tagger-demo" }
nano-gen-dimuon-demo = { path = "crates/nano-gen-dimuon-demo" }
nano-cli = { path = "crates/nano-cli" }
nano-mcp = { path = "crates/nano-mcp" }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
