[package]
name = "nano-corrections"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Rust correctionlib evaluator and typed correction wrappers for nano.rust"

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
