[package]
name = "nano-gen-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Build-time generated producer demo for nano.rust semantic specs"
build = "build.rs"

[dependencies]
nano-analysis = { workspace = true }
nano-core = { workspace = true }
nano-corrections = { workspace = true }
nano-inference = { workspace = true }
nano-spec = { workspace = true }

[dev-dependencies]
nano-io = { workspace = true }
nano-producers = { workspace = true }
nano-workflow = { workspace = true }

[build-dependencies]
nano-spec = { workspace = true }

[features]
default = []
