[package]
name = "nano-gen-higgs4l-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Build-time generated Higgs four-lepton harness demo for nano.rust semantic specs"
build = "build.rs"

[dependencies]
nano-analysis = { workspace = true }
nano-core = { workspace = true }
nano-io = { workspace = true, optional = true }

[features]
default = []
http = ["nano-io/http"]

[build-dependencies]
nano-spec = { workspace = true }

[dev-dependencies]
nano-spec = { workspace = true }
