[package]
name = "nano-gen-mutagger-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Build-time generated boosted-muon tagger control-region demo for nano.rust semantic specs"
build = "build.rs"

[dependencies]
nano-analysis = { workspace = true }
nano-core = { workspace = true }
nano-inference = { workspace = true }

[build-dependencies]
nano-spec = { workspace = true }

[dev-dependencies]
nano-spec = { workspace = true }
