[package]
name = "nano-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NanoAOD ROOT input reading and skim output writing for nano.rust"

[dependencies]
nano-core = { workspace = true }
nano-rootio = { workspace = true }

[features]
default = []
http = ["nano-rootio/http"]

[dev-dependencies]
nano-producers = { workspace = true }
