[package]
name = "nano-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NanoAOD ROOT input reading and skim output writing for nano.rust"

[dependencies]
kuva = { version = "0.1", optional = true, default-features = false }
nano-core = { workspace = true }
nano-rootio = { workspace = true }
serde = { workspace = true }
toml = "0.8"

[features]
default = []
http = ["nano-rootio/http"]
# To test unreleased kuva fixes, repoint `kuva` to a git fork here or with
# a workspace-level [patch.crates-io] entry.
plot = ["dep:kuva"]
plot-png = ["plot", "kuva/png"]
# Composite umbrellas: enable a combo with one flag instead of
# `--features "http plot"`. e.g. `cargo run --example higgs4l_opendata --features full`.
full = ["http", "plot"]
full-png = ["http", "plot-png"]

[dev-dependencies]
nano-producers = { workspace = true }
rayon = "1"
