[package]
name = "nano-producers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Channel producers for the nano.rust event loop"

[dependencies]
nano-analysis = { workspace = true }
nano-corrections = { workspace = true }
nano-core = { workspace = true }

[features]
default = []
http = ["nano-core/http"]
