[package]
name = "nano-rootio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Owned synchronous NanoAOD-focused ROOT reader"

[dependencies]
flate2 = "1"
lz4-compress = "0.1.1"
lzma-rs = "0.1.1"
ruzstd = "0.7"
rustls = { version = "0.21", features = ["dangerous_configuration"], optional = true }
rustls-pemfile = { version = "1", optional = true }
ureq = { version = "~2.8", default-features = false, features = ["tls"], optional = true }
url = { version = "2", optional = true }

[features]
default = []
http = ["dep:rustls", "dep:rustls-pemfile", "dep:ureq", "dep:url"]

[dev-dependencies]
futures = "0.3"
nom = "7"
root-io = { path = "../root-io" }
