[package]
name = "nano-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-gated TUI and web cockpit over nano.rust workflows"

[dependencies]
crossterm = "0.27"
nano-core = { workspace = true }
nano-io = { workspace = true }
nano-rootio = { workspace = true }
nano-spec = { workspace = true }
nano-workflow = { workspace = true }
ratatui = "0.26"
serde = { workspace = true }

axum = { version = "0.7", optional = true }
kuva = { version = "0.1", optional = true, default-features = false }
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread", "net"] }

[features]
default = []
http = ["nano-core/http", "nano-io/http", "nano-rootio/http", "nano-workflow/http"]
web = ["http", "dep:axum", "dep:kuva", "dep:tokio"]
